# hops

./: .clang-format  CMakeLists.txt
docs/: design.md
examples/: saxpy.cpp  saxpy2.cpp
include/hops/: arithmetic.h  base.h  error.h  hops.h  kernel.h  memory.h  parallel_kernel.h  raw_kernel.h  signature.h  view.h
src/: arithmetic.cpp  hops.cpp  kernel.cpp  memory.cpp  parallel_kernel.cpp  raw_kernel.cpp
tests/: arithmetic.cpp  saxpy.cpp
